<resources>
    <string name="app_name">Lab04</string>
    <string name="to">To</string>
    <string name="message">Type message…</string>
    <string name="send">Send</string>
    <string name="logout">Log out</string>
    <string name="register">Register</string>
    <string name="name">Nickname</string>
    <string name="save">Save</string>
    <string name="nick">Your nickname:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="createNickname">Create Nickname</string>
    <string name="createUser">Create User</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="mainFeed">Main Feed</string>
    <string name="userList">User List</string>
    <string name="loadedNewestMessages">Loaded newest messages…</string>
    <string name="loadedNewestUsers">Loaded newest users…</string>
    <string name="showingMessages">Showing all messages of</string>
    <string name="newMessageFrom">New message from </string>
    <string name="emptyEmail">Email can not be empty!</string>
    <string name="emptyPassword">Password can not be empty!</string>
    <string name="emptyNickname">Nickname can not be empty!</string>
    <string name="maxNickname">Nickname can not be longer than</string>
    <string name="characters">characters!</string>
    <string name="hello">Hello</string>
    <string name="maxMessage">Message can not be longer than</string>
    <string name="orEmpty">or empty!</string>
    <string name="authenticationFailed">Authentication failed</string>
    <string name="action_languages">Languages</string>
    <string name="number" translatable="false">0/256</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="selectLanguage">Select a language:</string>
</resources>
